[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zse"
version = "2.0.0"
description = "A CLI tool that allows UNSW students to submit work to CSE machines."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kareem Agha" },
    { name = "Abdur Raqeeb Mohammed" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paramiko==5.0.0",
    "colorama==0.4.6",
    "click==8.4.1",
    "rich-click==1.9.7",
]

[project.scripts]
zse = "main:cli"

[tool.setuptools]
py-modules = ["main"]
